--- a/proj/cmake/CMakeLists.txt
+++ b/proj/cmake/CMakeLists.txt
@@ -9,6 +9,13 @@ get_filename_component( APP_PATH "${CMAKE_CURRENT_SOURCE_DIR}/../../" ABSOLUTE )
 include( "${CINDER_PATH}/proj/cmake/modules/cinderMakeApp.cmake" )
 
 ci_make_app(
-	SOURCES     ${APP_PATH}/src/MaurerRose.cpp
+  APP_NAME    "MaurerRoseOriginal"
+	SOURCES     ${APP_PATH}/src/original/MaurerRose.cpp
+	CINDER_PATH ${CINDER_PATH}
+)
+
+ci_make_app(
+  APP_NAME    "MaurerRoseComplex"
+	SOURCES     ${APP_PATH}/src/complex/MaurerRose.cpp
 	CINDER_PATH ${CINDER_PATH}
 )
